--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body, h1, h2, h3, p {
 .header-grid {
   display: grid;
   grid-template-columns: repeat(16, 1fr);
-  gap: 50px;
+  gap: 0;
 }
 
 .search-container {
