--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ body, h1, h2, h3, p {
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-
+html,body{
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
 .wrapper {
   display: grid;
   grid-template-columns: 250px 1fr;
