--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@ body, h1, h2, h3, p {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 html,body{
-  overflow-x: hidden;
-  overflow-y: hidden;
+  overflow: auto;
+
 }
 .wrapper {
   display: grid;
   grid-template-columns: 250px 1fr;
   grid-template-rows: 250px 1fr;
   grid-template-areas: "sidebar header" "sidebar main";
-  min-height: 100vh;
+  box-sizing: border-box;
 }
 
 .dash {
